Allow navigation while a JavaScript dialog is up.

(It will cancel the dialog.)

BUG=669996
TEST=as in bug

Review-Url: https://codereview.chromium.org/2541173003
Cr-Commit-Position: refs/heads/master@{#435963}

Former-commit-id: 24a1bf068b07d183d456afdb8629e851467829c3